@@ -2270,7 +2270,7 @@
       <field cname="window" type="GdkWindow*" />
       <field cname="send_event" type="gint8" />
     </struct>
-    <struct name="EventButton" cname="GdkEventButton">
+    <struct name="EventButton" cname="GdkEventButton" hidden="1">
       <field cname="type" type="GdkEventType" />
       <field cname="window" type="GdkWindow*" />
       <field cname="send_event" type="gint8" />
