@@ -2,6 +2,7 @@
 <api>
   <symbol type="manual" cname="GdkEvent" name="Gdk.Event"/>
   <symbol type="manual" cname="GdkEventAny" name="Gdk.Event"/>
+  <symbol type="manual" cname="GdkEventButton" name="Gdk.EventButton"/>
   <symbol type="manual" cname="GdkEventKey" name="Gdk.EventKey"/>
 </api>
 
