@@ -1,3 +1,14 @@
+2004-02-18  Mike Kestner  <mkestner@ximian.com>
+
+	* gdk/Gdk.metadata : hide EventButton
+	* gdk/EventButton.cs : glue-based manual implementation.
+	* gdk/EventButton.custom : kill
+	* gdk/gdk-api.xml : regen
+	* gdk/gdk-symbols.xml : manual mapping for EventButton.
+	* glue/event.cs : expose Button struct fields.
+	* sample/CanvasExample.cs : fix EventButton ctor
+	* sample/GnomeHelloWorld.cs : fix EventButton ctor
+
 2004-02-17  Radek Doulik  <rodo@ximian.com>
 
 	* glib/Value.cs: use g_value_set_pointer for
